--- a/OIBSIP/landing-page/index.html
+++ b/OIBSIP/landing-page/index.html
@@ -34,13 +34,14 @@
     <main>
         <section class="text">
             <h1>Strawberry and vanilla.</h1>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget finibus mauris, 
-                in hendrerit quam.
+
+            <span>Free for Oasis Infobyte Team...
+
             </span>
 
             <div class="buttons">
-                <button type="button">More</button>
-                <button type="button">Make Cone</button>
+                <button type="button">Know More..</button>
+                <button type="button">Order Now</button>
             </div>
         </section>
 
