--- a/portfolio/Education.html
+++ b/portfolio/Education.html
@@ -81,21 +81,42 @@
                 <div class="timeline-month">
                     Education
                 </div>
-                <div class="timeline-section">
+<div class="timeline-section">
                     <div class="timeline-date">
-                        2020 - Present
+                        2023 - 2025
                     </div>
                     <div class="row">
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i> Institute Of Computer Science & Technology, Varanasi-India
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i> AJAY KUMAR GARG ENGINEERING COLLEGE, Ghaziabad, Uttar Pradesh-India
+                                    <p class="degree">Master of Computer Application</p>
+                                </div>
+                                <div class="box-content">
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://www.akgec.ac.in/
+                                       target=_blank style="color: white;">Website</a>
+                                    <div class="box-item">💥 Currently Pursuing MCA Course from this college.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="timeline-section">
+                    <div class="timeline-date">
+                        2020 - 2023
+                    </div>
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="timeline-box">
+                                <div class="box-title">
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i> Institute Of Computer Science & Technology, Varanasi Uttar Pradesh-India
                                     <p class="degree">Bachelor's in Computer Application</p>
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://icst.ac.in/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">💥 Currently Pursuing BCA Course from this college.</div>
+                                    <div class="box-item">💥 Graduated in Bachelor of Computer Applications (BCA).</div>
                                 </div>
                             </div>
                         </div>
